@@ -8,6 +8,7 @@
 * Bug 2942438: Wrong runtime library linked
 * Bug 2931722: pchheader handling not consistent between tools
 * Bug 2958829: Files pattern matching including too many files
+* Bug 2953594: includedirs / libdirs converting absolute paths to relative
 
 
 -----
